syntax = "proto3";

package kassie.v1;

option go_package = "github.com/KashifKhn/kassie/api/gen/go;kassiev1";

message Error {
  string code = 1;
  string message = 2;
  map<string, string> details = 3;
}

message Column {
  string name = 1;
  string type = 2;
  bool is_partition_key = 3;
  bool is_clustering_key = 4;
  int32 position = 5;
}

message CellValue {
  oneof value {
    string string_val = 1;
    int64 int_val = 2;
    double double_val = 3;
    bool bool_val = 4;
    bytes bytes_val = 5;
  }
  bool is_null = 6;
}

message ViewState {
  string keyspace = 1;
  string table = 2;
  string filter = 3;
  int32 page = 4;
}
